# simag

./: .gitignore  .project  .pydevproject  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  azure-pipelines.yml  documentation.rst
data/: ag_test_01.xml  logic_test_01.txt  logic_test_02.txt  sample.xml
docs/: README.md  SUMMARY.md
docs/agent/: README.md  repr.md
docs/logic/: README.md  syntax.md
simag/: main.rs
simag_core/: Cargo.toml
simag_core/benches/: repr.rs
simag_core/examples/: agent.rs  agent_ask.rs  bench_suite.sh
simag_core/src/: agent.rs  lib.rs  static_arenas.rs  static_var_map.rs  var_map.rs
simag_core/src/agent/: conf.rs  config.rs  mod.rs  persist.rs  storage.rs
simag_core/src/agent/kb/: bms.rs  class.rs  disc_btree.rs  entity.rs  mod.rs  persist.rs  repr.rs  sharded.rs  storage.rs  test.rs
simag_core/src/agent/kb/inference/: iexpr.rs  mod.rs  results.rs  rules.rs
simag_core/src/agent/kb/repl/: interpreter.rs  mod.rs
simag_core/src/agent/kb/test/: inference.rs  persistence.rs
simag_core/src/agent/lang/: built_ins.rs  cls_decl.rs  common.rs  fn_decl.rs  gr_func.rs  gr_memb.rs  logsent.rs  mod.rs  old_parser.rs  parser.rs  skolem.rs  terminal.rs  typedef.rs  var.rs
simag_core/src/agent/lang/parser/: args.rs  assertion.rs  ast.rs  bench.rs  mod.rs  numbers.rs  operators.rs  scope.rs  test.rs
simag_core/src/agent/lang/space_semantics/: mod.rs  move_fn.rs  space_arg.rs
simag_core/src/agent/lang/spatial_semantics/: location_fn.rs  mod.rs  move_fn.rs  spatial_arg.rs  spatial_ops.rs
simag_core/src/agent/lang/time_semantics/: mod.rs  time_arg.rs  time_calc.rs  time_ops.rs
simag_core/src/agent/time_semantics/: mod.rs  time_ops.rs
simag_core/src/storage/: index.rs  manager.rs  mod.rs
simag_maths/: Cargo.toml
simag_maths/benches/: dists
simag_maths/src/: err.rs  lib.rs  rng.rs
simag_maths/src/dists/: categorical.rs  chisquared.rs  exponential.rs  gamma.rs  mod.rs  pareto.rs  transforms.rs
simag_maths/src/model/: continuous.rs  discrete.rs  hybrid.rs  mod.rs
simag_maths/src/sampling/: continuous.rs
simag_maths/tests/bayesian_net/: continuous.rs  discrete.rs  mod.rs
simag_networking/: Cargo.toml
simag_networking/examples/: bootstrap_network.rs  bootstrap_secret  join_network.rs
simag_networking/src/: agent.rs  channel.rs  config.rs  group.rs  handle.rs  lib.rs  main.rs  message.rs  network.rs  peer_discovery.rs  rpc.rs  stream.rs  stream_behaviour.rs
simag_networking/src/tests/: connect_agents.rs  message_passing.rs  mod.rs
simag_networking/tests/: key2  message_passing.rs
simag_terminal/: Cargo.toml
simag_terminal/src/: action.rs  application.rs  cursor.rs  interpreter.rs  lib.rs  state.rs  terminal.rs
simag_terminal/src/unix/: mod.rs  terminal.rs
src/: Cargo.toml  main.rs
src/core/: Cargo.toml  __init__.py  actions.py  agents.py  bms.py  env.py  kb_logic.py  kblogic.py  logic_parser.py  percept.py  planner_manager.py  planning_manager.py  rustfmt.toml  tools.py
src/core/src/: lib.rs  utils.rs
src/core/src/agent/: agent.rs  bms.rs  kb.rs  main.rs  mod.rs
src/core/src/agent/bms/: mod.rs
src/core/src/agent/kb/: bms.rs  iexpr_inf.rs  inf.rs  interpreter.rs  mod.rs  repr.rs  rule_inf.rs  test.rs
src/core/src/agent/kb/inference/: iexpr.rs  mod.rs  results.rs  rules.rs
src/core/src/agent/kb/repl/: interpreter.rs  mod.rs
src/core/src/agent/lang/: cls_decl.rs  common.rs  fn_decl.rs  gr_func.rs  gr_memb.rs  logsent.rs  mod.rs  parser.rs
src/core/src/lang/: common.rs  log_sentence.rs  logsent.rs  mod.rs  parser.rs  repl.rs
src/core/src/utils/: mod.rs
src/manager/: Cargo.toml
src/manager/src/: main.rs
src/maths/: Cargo.toml
src/maths/benches/: benches.rs  lib.rs  mod.rs
src/maths/benches/dists/: mod.rs
src/maths/src/: err.rs  lib.rs  model.rs  rng.rs
src/maths/src/dists/: beta.rs  categorical.rs  cauchy.rs  chisquared.rs  exponential.rs  fdist.rs  gamma.rs  logistic.rs  lognormal.rs  mod.rs  normal.rs  pareto.rs  studentt.rs  tdist.rs  transforms.rs
src/maths/src/mcmc/: mod.rs
src/maths/src/model/: bayesnet.rs  continuous.rs  discrete.rs  hybrid.rs  mod.rs
src/maths/src/sampling/: continuous.rs  discrete.rs  hybrid.rs  mod.rs
src/maths/tests/: lib.rs
src/maths/tests/bayesian_net/: continuous.rs  discrete.rs  mod.rs
src/network/: Cargo.toml
src/network/src/: lib.rs
src/simag/core/: __init__.py  _helpers.py  agents.py  bms.py  env.py  kblogic.py  parser.py  planner_manager.py
src/simag/core/grammar/: grako_parser.py  simag.ebnf
src/term/: Cargo.toml
src/term/src/: action.rs  cursor.rs  lib.rs
tests/: ag_test_01.xml  kblogic.py  knowledge_base.py  logic_test_01.txt  logic_test_02.txt  planner_manager.py
tests/kblogic/: ask_func.txt  ask_pred.txt  eval_fol.txt  parse_function.txt  parse_predicate.txt  parse_sentence_with_vars.txt
tests/knowledge_base/: ask_func.txt  ask_pred.txt  eval_fol.txt  parse_function.txt  parse_predicate.txt  parse_sentence_with_vars.txt  tell_complx_sent.txt  tell_function.txt  tell_predicate.txt  tell_sentence_with_vars.txt
tests/planner_manager/: move_box__to_table.xml  move_box_to_table.json
