[package]
name = "simag"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
autobins = false
edition = "2018"
rust = "1.49"
license = "Apache-2.0 OR MIT"
codecov = { repository = "iduartgomez/simag", branch = "master", service = "github" }
default-run = "simag"

[dependencies]
ansi_term =  "0.12"
once_cell = "1.5"

# own deps:
simag_core = { path = "./simag_core" }
simag_networking = { path = "./simag_networking", optional = true }
# simag_maths = { path = "simag_maths" }
simag_term_utils = { path = "./simag_terminal", optional = true }

[[bin]]
name = "simag"
path = "bin/main.rs"

[[bin]]
name = "manager"
path = "bin/manager.rs"
required-features = ["simag_term_utils"]

[[bin]]
name = "repl"
path = "bin/repl.rs"
required-features = ["simag_term_utils"]

[features]
repl_unix = ["simag_term_utils", "simag_term_utils/unix_term"]

[workspace]
members = ["simag_core", "simag_networking", "simag_terminal"]

[profile.release]
debug = true
