[package]
name = "simag"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
autobins = false
edition = "2018"
rust = "1.51"
license = "MPL-2.0"
default-run = "simag"

[dependencies]
simag_core = { path = "./simag_core" }
simag_networking = { path = "./simag_networking", optional = true }
# simag_maths = { path = "simag_maths" }
simag_term_utils = { path = "./simag_terminal", optional = true }

[[bin]]
name = "simag"
path = "bin/main.rs"

[features]
repl = ["simag_term_utils"]

[workspace]
members = ["simag_core", "simag_networking", "simag_terminal"]

[profile.release]
debug = false
