[package]
name = "simag_core"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
edition = "2018"

[features]
persistence = ["serde", "bincode"]

[dependencies]
bincode = { version = "1.3", optional = true }
chrono = "0.4"
crossbeam = "0.8"
dashmap = "4.0"
env_logger = "0.8"
float-cmp = "0.8"
nom = { version = "6.0.1" }
num_cpus = "1.13"
log = "0.4"
once_cell = "1.5"
parking_lot = "0.11"
rayon = "1.5"
serde = { version = "1.0", optional = true }
smallvec = "1.6"
uuid = { version = "0.8.2", features = ["v4"]}

# internal
# simag_terminal = { path = "../simag_terminal" }

[dev-dependencies]
criterion = "^0.3.2"

[[bench]]
name = "repr"
harness = false
