[package]
name = "simag_core"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
edition = "2018"

[features]
persistence = ["serde", "bincode"]

[dependencies]
bincode = { version = "1.3", optional = true }
crossbeam = "0.8"
dashmap = { version = "4.0" }
env_logger = "0.8"
float-cmp = "0.8"
nom = { version = "6.0.1" }
num_cpus = "1.13"
log = "0.4"
once_cell = "1.5"
parking_lot = "0.11"
rayon = "1.5"
serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
uuid = { version = "0.8.2", features = ["v4"]}

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.smallvec]
version = "1.6"
features = ["serde"]

[dev-dependencies]
criterion = "^0.3.2"

[[bench]]
name = "repr"
harness = false
