[package]
name = "simag_networking"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
edition = "2018"

[dependencies]
# async-trait = "0.1.40"
bincode = "1.3"
config = "0.10"
crossbeam = "0.8"
ed25519-dalek = { version = "1.0", optional = true }
env_logger = "0.8"
futures_codec = "0.4"
libp2p = { version = "0.33", features = [
    "deflate",
    "dns",
    "identify",
    "kad",
    "gossipsub",
    "mplex",
    "noise",
    "tcp-tokio",
    "yamux"
] }
log = "0.4"
once_cell = "1.5.2"
rand = { version = "0.7.3", features = ["getrandom"] }
smallvec = "1.6"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
typetag = "0.1"
tokio = { version = "0.3.6", features = ["macros", "rt-multi-thread", "sync", "time"] }
unsigned-varint = { version = "0.5", features = ["futures-codec"] }
uuid = { version = "0.8.1", features = ["v5", "serde"]}

# internal:
simag_core = { path = "../simag_core" }

[[bin]]
name = "key-manager"
path = "bin/key_manager.rs"
required-features = ["key-manager"]

[features]
key-manager = ["ed25519-dalek"]
