[package]
name = "simag_networking"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
edition = "2018"
rust = "1.51"

[dependencies]
# async-trait = "0.1.40"
asynchronous-codec = "0.6"
bincode = "1.3"
config = "0.11"
crossbeam = "0.8"
dashmap = "4.0"
env_logger = "0.9"
libp2p = { version = "0.39", features = [
    "deflate",
    "identify",
    "kad",
    "gossipsub",
    "mplex",
    "noise",
    "tcp-tokio",
    "dns-tokio",
    "yamux"
] }
log = "0.4"
once_cell = "1.5"
rand = { version = "0.8.3", features = ["getrandom"] }
smallvec = "1.6"
serde = { version = "1.0", features = ["derive", "rc"] }
thiserror = "1.0"
typetag = "0.1"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
unsigned-varint = { version = "0.7", features = ["codec"] }
uuid = { version = "0.8.1", features = ["v5", "serde"]}

# internal:
simag_core = { path = "../simag_core" }

[[bin]]
name = "key-manager"
path = "bin/key_manager.rs"
required-features = ["key-manager"]

[features]
key-manager = []
