[package]
name = "simag_term_utils"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
autobins = false
edition = "2018"

[dependencies]
termion = { version = "1.5.5", optional = true }
once_cell = "1.5"
copypasta = "0.7.0"

# internal
simag_core =  { path = "../simag_core" }

[features]
unix_term = ["termion"]
