[package]
name = "simag_term_utils"
version = "0.0.1"
authors = ["Ignacio Duart Gómez <iduartgomez@gmail.com>"]
autobins = false
edition = "2018"

[dependencies]
ansi_term =  "0.12"
copypasta = "0.7"
crossterm = "0.19"
once_cell = "1.5"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }

# internal
simag_core =  { path = "../simag_core" }

[[bin]]
name = "manager"
path = "bin/manager.rs"

[[bin]]
name = "repl"
path = "bin/repl.rs"
