[package]
name = "simag_core"
version = "0.0.1"
authors = ["IDG <iduartgomez@gmail.com>"]
edition = "2018"

[dependencies]
float-cmp = "0.5.2"
nom = { version = "^2.1.0", features = ["verbose-errors"] }
chrono = "^0.4.0"
rayon = "^1.2.0"
num_cpus = "1.10.1"
log = "^0.4.8"
once_cell = { version = "1.2.0", optional = true}
env_logger = { version = "0.6.2", optional = true}

[features]
tracing = ["once_cell", "env_logger"]
