[package]
name = "simag_core"
version = "0.0.1"
authors = ["IDG <iduartgomez@gmail.com>"]
edition = "2018"

[dependencies]
float-cmp = "0.5.2"
nom = { version = "^2.1.0", features = ["verbose-errors"] }
chrono = "0.4.9"
rayon = "1.2.0"
num_cpus = "1.10.1"
log = "0.4.8"

# own package
simag_term = { path = "../term" }

# optionals
once_cell = "1.2.0"
env_logger = { version = "0.6.2", optional = true}

# bin deps
ansi_term = { version = "0.12.1", optional = false }

[features]
tracing = ["env_logger"]
#binaries = ["ansi_term"]

[[bin]]
name = "manager"
#required-features = ["binaries"]
path = "src/bin/manager.rs"

[[bin]]
name = "repl"
#required-features = ["binaries"]
path = "src/bin/repl.rs"
