[package]
name = "simag_maths"
version = "0.0.1"
authors = ["IDG <iduartgomez@gmail.com>"]

[dependencies]
rand = "^0.3"
float-cmp = "^0.2"
itertools = "^0.6"
uuid = { version = "^0.4", features = ["v4"] }
statrs = "^0.6"
GSL = { git = "https://github.com/GuillaumeGomez/rust-GSL.git" }
#ndarray = "^0.8"
